// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ IntegrationCard ]] renders the integration logo along with the name: {"shortcode":"slack","name":"Slack","logo":"https://static.deepsource.io/integration_logos/slack.svg","installed":true,"showInstallationStatus":false} 1`] = `
"<a class=\\"group flex flex-col rounded-md bg-ink-300 p-4 text-left hover:bg-ink-200\\">
  <div class=\\"space-y-2\\">
    <div class=\\"flex gap-x-3\\"><img src=\\"https://static.deepsource.io/integration_logos/slack.svg\\" alt=\\"logo\\" class=\\"mt-0.5 h-5 w-5 flex-shrink-0\\">
      <h2 class=\\"text-base font-medium text-vanilla-100\\">
        Slack
      </h2>
    </div>
    <p class=\\"integration-description mr-3 text-xs leading-6 text-vanilla-400\\">
      Send event alerts to your channels.
    </p>
  </div>
  <!---->
</a>"
`;

exports[`[[ IntegrationCard ]] renders the integration logo along with the name: {"shortcode":"slack","name":"Slack","logo":"https://static.deepsource.io/integration_logos/slack.svg","installed":true,"showInstallationStatus":null} 1`] = `
"<a class=\\"group flex flex-col rounded-md bg-ink-300 p-4 text-left hover:bg-ink-200\\">
  <div class=\\"space-y-2\\">
    <div class=\\"flex gap-x-3\\"><img src=\\"https://static.deepsource.io/integration_logos/slack.svg\\" alt=\\"logo\\" class=\\"mt-0.5 h-5 w-5 flex-shrink-0\\">
      <h2 class=\\"text-base font-medium text-vanilla-100\\">
        Slack
      </h2>
    </div>
    <p class=\\"integration-description mr-3 text-xs leading-6 text-vanilla-400\\">
      Send event alerts to your channels.
    </p>
  </div>
  <!---->
</a>"
`;

exports[`[[ IntegrationCard ]] renders the integration logo along with the name: {"shortcode":"slack","name":"Slack","logo":"https://static.deepsource.io/integration_logos/slack.svg","installed":true,"showInstallationStatus":true} 1`] = `
"<a class=\\"group flex flex-col rounded-md bg-ink-300 p-4 text-left hover:bg-ink-200\\">
  <div class=\\"space-y-2 mb-3\\">
    <div class=\\"flex gap-x-3\\"><img src=\\"https://static.deepsource.io/integration_logos/slack.svg\\" alt=\\"logo\\" class=\\"mt-0.5 h-5 w-5 flex-shrink-0\\">
      <h2 class=\\"text-base font-medium text-vanilla-100\\">
        Slack
      </h2>
    </div>
    <p class=\\"integration-description mr-3 text-xs leading-6 text-vanilla-400\\">
      Send event alerts to your channels.
    </p>
  </div>
  <div class=\\"mt-auto\\">
    <ztag-stub bg-color=\\"juniper\\" spacing=\\"py-1 px-2\\" size=\\"x-small\\" text-size=\\"xxs\\">
      <div class=\\"flex items-center space-x-1.5\\">
        <z-icon icon=\\"check\\" color=\\"ink-50\\" size=\\"x-small\\" class=\\"stroke-3\\"></z-icon> <span class=\\"font-semibold leading-none tracking-wide text-ink-50\\">
          INSTALLED
        </span>
      </div>
    </ztag-stub>
  </div>
</a>"
`;

exports[`[[ IntegrationCard ]] renders the integration logo along with the name: {"shortcode":"slack","name":"Slack","logo":"https://static.deepsource.io/integration_logos/slack.svg","installed":true} 1`] = `
"<a class=\\"group flex flex-col rounded-md bg-ink-300 p-4 text-left hover:bg-ink-200\\">
  <div class=\\"space-y-2\\">
    <div class=\\"flex gap-x-3\\"><img src=\\"https://static.deepsource.io/integration_logos/slack.svg\\" alt=\\"logo\\" class=\\"mt-0.5 h-5 w-5 flex-shrink-0\\">
      <h2 class=\\"text-base font-medium text-vanilla-100\\">
        Slack
      </h2>
    </div>
    <p class=\\"integration-description mr-3 text-xs leading-6 text-vanilla-400\\">
      Send event alerts to your channels.
    </p>
  </div>
  <!---->
</a>"
`;
